# homepage

./: .gitignore  COPYRIGHT  LICENSE  homepage.cabal
data/: config
data/content/posts/2009/03/28/: building-a-website-part-1.md
data/content/posts/2009/03/30/: building-a-website-part-2.md
data/content/posts/2009/07/02/: building-a-website-part-3.md
data/content/static/css/: home.css  posts.css
data/templates/: 404.st  about.st  contact.st  deliciousBookmark.st  disqusfooter.st  footer.st  googleanalytics.st  header.st  home.st  htmlheader.st  index.st  indexPostRow.st  navigation.st  post.st
data/templates/posts/: index.st
src/: Homepage.hs  Main.hs
src/Homepage/: Handlers.hs  Types.hs
src/Homepage/Util/: Delicious.hs  Templates.hs
static/css/: common.css  highlighting.css  home.css  posts.css
templates/: about.st  contact.st  disqus.st  disqusThread.st  home.st  htmlfooter.st  htmlheader.st  navigation.st  post.st  temppost1.st  temppost2.st
