Name:                homepage
Version:             0.1
Synopsis:            gregorycollins.net

License:             BSD3
License-file:        LICENSE
Author:              Gregory Collins

Stability:           Experimental
Category:            Web
Build-type:          Simple

Extra-Source-Files:
    src/*hs
    static/*
    templates/*.st

Cabal-Version:       >= 1.6

Executable gregorycollins.net
    Main-is:             Main.hs
    hs-source-dirs:
        src
    ghc-options: -Wall -funbox-strict-fields -O2 -fvia-C -optc-O3 -funfolding-use-threshold=16
    Build-Depends: base >= 4 && <5, syb, HStringTemplate,
                     HStringTemplateHelpers, mtl, bytestring,
                     happstack-server >= 0.3,
                     containers, pretty, pureMD5,
                     directory, filepath, hscolour, HTTP, safe,
                     old-time, parsec, happstack-helpers,
                     DebugTraceHelpers, delicious, unix,
                     time, old-locale

